--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>INDIAN HOMOEOPATHY DRUGS</title>
+	 <link rel="icon" href="logo.jpg">
 	<style>
 		table, td, th {
   border: 5px solid white;
