--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -90,8 +90,225 @@ table {
      <tr>
      	<td>1</td>
      	<td>Abelmoschus moschatus</td>
-     	<td></td>
-     	<td></td>
+     	<td>Musk mallow</td>
+     	<td>Sanskrit: लताकस्तूरिका  ;|; Bengali: kalkasturi, latakasturi, mushakdan</td>
+     </tr>
+     <tr>
+     	<td>2</td>
+     	<td>Abrus precatorius</td>
+     	<td>Rosary pea</td>
+     	<td>Sanskrit: गुञ्जा (gunja),Gulaganji (Kannada), kundu mani (Tamil), Guruvinda ginja (Telugu), Kunni kuru(Malayalam),(Bengali Names) : কুঁচ, রত্তি, চূড়ামনি, শাঙ্গুষ্ঠা, গুঞ্জা, সৌম্যা, শিখন্ডী, কৃষ্ণলা, অরুণা, তাম্রিকা, রক্তিকা, কম্ভোজী, ভিল্লিভূষণা, মানচূড়া(Kunch, Ratti, Chramoni, Shangushtha. Gunja, Soumya, Shikhandi, Krishnala, Aruna, Tamrika, Raktika, Kambhojee, Bhillibhushana, Manchura)</td>
+     </tr>
+     <tr>
+     	<td>3</td>
+     	<td>Acalypha indica</td>
+     	<td>Indian scalypha</td>
+     	<td>মুক্তঝুরি, শ্বেতবসন্ত (Bangla) ;|; Harita Manjari (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>4</td>
+     	<td>Acorus calamus</td>
+     	<td> Sweet flag</td>
+     	<td>বচ (Bengali)  ;|; Vacha (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>5</td>
+     	<td> Aegle marmelos</td>
+     	<td> wood apple</td>
+     	<td>বেল(ফল) (Bengali) ;|; Bilva (Sanskrit) </td>
+     </tr>
+     <tr>
+     	<td>6</td>
+     	<td>Allium sativum</td>
+     	<td> Garlic</td>
+     	<td>রসুন(Bengali) ;|; Laśuna (लशुन)(Sanskrit) </td>
+     </tr>
+     <tr>
+     	<td>7</td>
+     	<td>Andrographis paniculata</td>
+     	<td>creat or green chiretta</td>
+     	<td>কালমেঘ (Bengali)  ;|; Bhunimba, Yavatikta, Kalamegha (Sanskrit) </td>
+     </tr>
+     <tr>
+     	<td>8</td>
+     	<td>Arctium lappa</td>
+     	<td>greater burdock</td>
+     	<td>ভাঁটুইগাছ (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>9</td>
+     	<td>Atista indica</td>
+     	<td>Glycosmis pentaphylla</td>
+     	<td>Ash-sheora,Ash-oura,Matkhila (Bengali) ;|; Vananimbuka,Asvasakota,Koea,Patalagorudi,rusoe (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>10</td>
+     	<td>Azadirachta indica</td>
+     	<td>Neem</td>
+     	<td>নিম(Bengali) ;|; Nimba(Sanskrit)[Neem is also called 'Arista' in Sanskrit - A word that means 'perfect, complete and imperishable']</td>
+     </tr>
+     <tr>
+     	<td>11</td>
+     	<td>Boerhaavia diffusa</td>
+     	<td>punarnava</td>
+     	<td>Gadapushpa[गदापुष्‍पा] Punarnova(Bengali) ;|; पुनर्नवा [Punarnava] ,वर्षाभू [Varshabhu],
+शोथाग्नी [Shothagni] (Sanskrit)</td>
+     </tr>
+<tr>
+     	<td>12</td>
+     	<td>Caesalpinia bonducella</td>
+     	<td>Gray Nicker</td>
+     	<td>নাটাকরঞ্জ Natakaranja (Bengali) ;|; Kat Karanj or  Kat-karanj [कटकरंज], कटकलेजी [Kat-kaleji], गजगा [Gajga], पट्टिल [Pattil], पांशुल [Panshul], पूतिक[ Putik], पूतिकरंज [Putikaranj] (Hindi)</td>
+     </tr>
+     <tr>
+     	<td>13</td>
+     	<td>Calotropis gigantea</td>
+     	<td>Crown Flower  or giant milkweed</td>
+     	<td>Akanda Phool (Bengali) ;|;मदार (Hindi)[ आक, 'अर्क' और अकौआ भी कहते हैं] ;|; Arka (Sanskrit)  </td>
+     </tr>
+      <tr>
+     	<td>14</td>
+     	<td>Caltha palustris</td>
+     	<td>Yellow Marsh Marigold or kingcup or Cowflock or  Cowslip</td>
+     	<td>Vernacular name : Mei-bytengdoh (Kh.), Danying khongru (Monpa).</td>
+     </tr>
+     <tr>
+     	<td>15</td>
+     	<td>Cassia sophera</td>
+     	<td>Senna Sophera</td>
+     	<td>Vernacular names include algarrobilla, baner, kasunda, kasaundi (Hindi) and kolkasunda (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>16</td>
+     	<td> Cephalandra indica</td>
+     	<td>Ivy Gourd</td>
+     	<td>Kundru (Hindi) ;|; তেলাকুচা (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>17</td>
+     	<td> Cinnamomum zeylanicum</td>
+     	<td>Cinnamon (popularly known as Dalchini)</td>
+     	<td>दालचीनी (Hindi) ;|; দারুচিনি (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>18</td>
+     	<td> Cynodon dactylon</td>
+     	<td>Bermuda grass</td>
+     	<td>দূর্বা (Bengali) ;|; दूब या दुर्वा (Hindi) ;|; Durva(Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>19</td>
+     	<td> Desmodium gangeticum</td>
+     	<td>salparni</td>
+     	<td>Chalani Salpani (Bengali) ;|; दीर्घमूली [Dirghamuli], ध्रुवा [Dhruva], पीवरी [Pivari] ,शालपर्णी [Shalparni], सालपानी [Salpani] (Hindi) ;|; अंशुमती [Anshumati],दीर्घमूला [Dirghamoola],ध्रुवा [Dhruva],पीवरी [Pivari],शालपर्णी [Shalaparni] (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>20</td>
+     	<td> Embelia ribes</td>
+     	<td>false black pepper , white-flowered embelia</td>
+     	<td>viḍaṅga (Sanskrit: विडङ्ग) ;|;Vidang (Bengali) </td>
+     </tr>
+     <tr>
+     	<td>21</td>
+     	<td> Ficus religiosa</td>
+     	<td>Sacred Fig Tree</td>
+     	<td>অশ্বত্থ [Ashathwa](Bengali) ;|; Pippal (Hindi) ;|; अश्वत्थ (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>22</td>
+     	<td> Galium aparine</td>
+     	<td>cleavers, bedstraw, catchweed bedstraw, grip grass, sticky willy</td>
+     	<td>goose kuri ,कुरी [Kuri] (Hindi) </td>
+     </tr>
+      <tr>
+     	<td>23</td>
+     	<td> Gymnema sylvestre</td>
+     	<td>gymnema, Australian cowplant, and Periploca of the woods</td>
+     	<td>gurmar (Hindi) ;|; মেষশৃঙ্গ বা অজাগন্ধিনি বা মধুনাশিনি বা গুড় মার  (Bengali) ;|; Madhunashini (Sanskrit)</td>
+     </tr>
+     <tr>
+     	<td>24</td>
+     	<td> Holarrhena antidysenterica </td>
+     	<td> Indrajav, Coneru </td>
+     	<td>Kutaja (Sanskrit) ;|; কুর্চি (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>25</td>
+     	<td> Hydrocotyle asiatica (new name - Centella asiatica) </td>
+     	<td> Indian Pennywort, Asiatic Pennywort, Gotu Kola, Spadeleaf </td>
+     	<td>থানকুনি (Bengali) ;|; maṇḍūkaparṇī, maṇḍūkī (Sanskrit) ;|; brahmamaṇḍūkī, beṃgsāg(Hindi)</td>
+     </tr>
+     <tr>
+     	<td>26</td>
+     	<td> Lamium album </td>
+     	<td> white nettle or white dead-nettle </td>
+     	<td>Ruksha(रूक्षा)</td>
+     </tr>
+     <tr>
+     	<td>27</td>
+     	<td>Leucas aspera</td>
+     	<td> Thumbai or Thumba</td>
+     	<td>শ্বেতাদ্রোণ, ধুলফি, দুলপি, দনকলস, ছোট হালকুশা, দন্ডকলস, দুলফি শাক, দল কলস, ধুবরি, দোর কলস, কান শিশা, কাউন শিশা, ধুরপ শাক  (Bengali) ;|; dronapushpi, chitrak-shupa and chitrapathrika (Sanskrit) ;|; goma madhupati (Hindi)</td>
+     </tr>
+     <tr>
+     	<td>28</td>
+     	<td> Luffa amara </td>
+     	<td> white nettle or white dead-nettle </td>
+     	<td>Ruksha(रूक्षा)</td>
+     </tr>
+     <tr>
+     	<td>29</td>
+     	<td> Mangifera indica </td>
+     	<td> mango </td>
+     	<td>আম  (Bengali ) ;|; आम (Hindi)</td>
+     </tr>
+     <tr>
+     	<td>30</td>
+     	<td> Nyctanthes arbortristis </td>
+     	<td> night-blooming jasmine, tree of sadness, tree of sorrow, coral jasmine </td>
+     	<td>শিউলি ফুল বা শেফালি (Bengali ) ;|; হরসিঙ্গার/হরশৃঙ্গার, পারিজাত (Hindi) ;|; নালাকুমকুমাকা, হারসিঙ্গারাপুস্পক, সুকলাঙ্গি, রাজানিহাসা, মালিকা, বিজয়া, নিসাহাসা, প্রহার্ষিনী, প্রভোলানালিকা, বাথারি, ভুথাকেশি, সীতামাঞ্জারি, সুবাহা, নিশিপুস্পিকা, প্রযক্তা, প্রযক্তি (Sanskrit) </td>
+     </tr>
+     <tr>
+     	<td>31</td>
+     	<td> Ocimum canum </td>
+     	<td> Wild Basil  </td>
+     	<td>Kali Tulasi (Hindi) ;|; Gramya ; Thiksnamanu (Sanskrit) ;| ; বন তুলসী (Bengali) ;|; KRISHNA TULSI </td>
+     </tr>
+      <tr>
+     	<td>32</td>
+     	<td> Ocimum sanctum </td>
+     	<td> Holy Basil </td>
+     	<td>Kali Tulasi (Hindi) ;|; Gramya ; Thiksnamanu (Sanskrit) ;| ;তুলসী (Bengali) ;|; RAM TULSI </td>
+     </tr>
+     <tr>
+     	<td>33</td>
+     	<td> Oldenlandia herbacea </td>
+     	<td> 	Two-flowered Oldenlandia, Flat-top Mille Graines, Old World Diamond-Flower </td>
+     	<td>Kshetr parpata (Sanskrit) ;|; Khetpapra (Bengali) ;|; Daman papar (Hindi)</td>
+     </tr>
+     <tr>
+     	<td>34</td>
+     	<td> Opuntia vulgaris </td>
+     	<td> 	prickly pear cactus </td>
+     	<td>ফনী মনসা (Bengali) ;|; नाग फनी (Hindi)</td>
+     </tr>
+     <tr>
+     	<td>35</td>
+     	<td> Piper nigrum </td>
+     	<td> 	Black Pepper </td>
+     	<td>গোল মরিচ (Bengali) ;|; काली मिर्च (Hindi) </td>
+     </tr>
+      <tr>
+     	<td>36</td>
+     	<td> Plantago major </td>
+     	<td> 	Common Plantain, White-man's Foot, Cart-track-plant </td>
+     	<td>Asvagola (Sanskrit) ;|; Lahuriya (Hindi) ;|; Singa Gach (Assamese) </td>
+     </tr>
+     <tr>
+     	<td>37</td>
+     	<td> Polygonum punctatum </td>
+     	<td> 	dotted smartweed and dotted knotweed </td>
+     	<td>------- </td>
      </tr>
 </table>
 </body>
