--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -307,8 +307,98 @@ table {
      <tr>
      	<td>37</td>
      	<td> Polygonum punctatum </td>
-     	<td> 	dotted smartweed and dotted knotweed </td>
-     	<td>------- </td>
+     	<td> dotted smartweed and dotted knotweed </td>
+     	<td>বিশল্যকরণী (Bengali)</td>
+     </tr>
+     <tr>
+     	<td>38</td>
+     	<td> Rauwolfia serpentina </td>
+     	<td> 	Indian Snakeroot </td>
+     	<td>Sarpagandha (Bengali) ;|; Sarpagandha (Sanskrit) </td>
+     </tr>
+     <tr>
+     	<td>39</td>
+     	<td> Saraca indica </td>
+     	<td> 	Sorrowless Tree, Asoka Tree, Ashoka Tree, Gapis, Talan </td>
+     	<td>অশোক (Bengali) ;|; अशोक वृक्ष (Hindi) </td>
+     </tr>
+     <tr>
+     	<td>40</td>
+     	<td> Sinapis nigra </td>
+     	<td> 	black mustard </td>
+     	<td>सरसों बीज (Hindi)  ;|; Kola-sariyoh (Assamese) ;|; </td>
+     </tr>
+     <tr>
+          <td>41</td>
+          <td> Solanum nigrum </td>
+          <td> Makoi or black nightshade </td>
+          <td>কাকমাচি বা তিতবেগুন(Bengali) ;|; मकोय [दूसरा नाम ककमाची भी है] (Hindi) ;|; akamachi, Kakahva, Makoi (Sanskrit)</td>
+     </tr>
+      <tr>
+          <td>42</td>
+          <td> Solidago virgaurea </td>
+          <td> European goldenrod or woundwort or  Himalayan Goldenrod </td>
+          <td>पिंजा फूल [Pinja phool], सोनाली [Sonali] (hindi) ;|;  </td>
+     </tr>
+     <tr>
+          <td>43</td>
+          <td> Stellaria media </td>
+          <td> Common chickweed </td>
+          <td>बुच बुचा [buch-bucha] (Hindi) ;|;  মৰলীয়া [Moroliya] (Assamese) ;|;  </td>
+     </tr>
+     <tr>
+          <td>44</td>
+          <td>Syzygium jambolanum</td>
+          <td> Java Plum, Jambolan, Jiwat, Salam, Kerian Duat </td>
+          <td> জাম [Kala jam] (Bengali) ;|; जामुन (Hindi) ;|; जंबूल [Jambula] (Sanskrit)  </td>
+     </tr>
+     <tr>
+          <td>45</td>
+          <td> Taxus baccata </td>
+          <td> English yew or common yew or Himalayan Yew </td>
+          <td>Birmi,Bhirmie,Talish Patra, Bhada Getela (Bengali) ;|; Sukapuspa, Vikarna (Sanskrit) ;|; Thuner, Talispatra Bhed (Hindi)</td>
+     </tr>
+     <tr>
+          <td>46</td>
+          <td> Terminalia arjuna </td>
+          <td> arjuna or arjun tree </td>
+          <td>অর্জুন (উদ্ভিদ) , অর্জুন গাছের বাকল (Bengali) ;|; अर्जुन [Arjuna ] (Sanskrit)</td>
+     </tr>
+     <tr>
+          <td>47</td>
+          <td> Terminalia chebula </td>
+          <td> chebulic myrobalan </td>
+          <td>Harar, Harra, Harad (Hindi) ;|; haritaki (Sanskrit and Bengali)</td>
+     </tr>
+      <tr>
+          <td>48</td>
+          <td> Tinospora cordifolia </td>
+          <td> heart-leaved moonseed, guduchi or giloy </td>
+          <td>गिलोय (Hindi) ;|; গুলঞ্চ  or গিলয় (Bengali) ;|; অমৃত, তন্ত্রিকা, কুণ্ডলিনী, চক্রলক্ষ্মীণি (Sanskrit)</td>
+     </tr>
+     <tr>
+          <td>49</td>
+          <td> Tylophora indica </td>
+          <td> Indian-Ipecacuanha </td>
+          <td>অন্তমূল or অংতমূল (Bengali) ;|; ananthamul and arkaparni (In Ayurveda) ;|; Arkaparni, Lataksiri ,Shwasaghni  (Sanskrit)</td>
+     </tr>
+      <tr>
+          <td>50</td>
+          <td>Urtica urens</td>
+          <td> annual nettle, dwarf nettle, small nettle, dog nettle, or burning nettle </td>
+          <td>লাল-বিছুটি(Bengali) ;|; बिछाता [bichata], बिछुआ [bichua], बिछुटी [bichuti] (Bengali) ;|; </td>
+     </tr>
+      <tr>
+          <td>51</td>
+          <td>Viola odorata</td>
+          <td> wood violet, sweet violet, English violet, common violet, florist's violet, or garden violet. </td>
+          <td>Banosha (Bengali) ;|;  बनफ्शा [Vanaphsa] (Sanskrit and Hindi)  </td>
+     </tr>
+      <tr>
+          <td>52</td>
+          <td>Viscum album</td>
+          <td> European mistletoe and common mistletoe </td>
+          <td>Bhangra [ভাঙড়া] (Bengali) ;|; Bhangra [भंगरा] (Hindi)  </td>
      </tr>
 </table>
 </body>
