--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -253,8 +253,8 @@ table {
      <tr>
      	<td>28</td>
      	<td> Luffa amara </td>
-     	<td> white nettle or white dead-nettle </td>
-     	<td>Ruksha(रूक्षा)</td>
+     	<td> Angled Loofah, Ridged Gourd, Chinese Okra </td>
+     	<td> ধুঁধুল ,তিতা ধুন্দুল (BEngali) ;|;  तिक्त कोषातकी (Sanskrit)</td>
      </tr>
      <tr>
      	<td>29</td>
