--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -254,7 +254,7 @@ table {
      	<td>28</td>
      	<td> Luffa amara </td>
      	<td> Angled Loofah, Ridged Gourd, Chinese Okra </td>
-     	<td> ধুঁধুল ,তিতা ধুন্দুল (BEngali) ;|;  तिक्त कोषातकी (Sanskrit)</td>
+     	<td> ধুঁধুল ,তিতা ধুন্দুল (Bengali) ;|;  तिक्त कोषातकी (Sanskrit)</td>
      </tr>
      <tr>
      	<td>29</td>
