--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -386,7 +386,7 @@ table {
           <td>50</td>
           <td>Urtica urens</td>
           <td> annual nettle, dwarf nettle, small nettle, dog nettle, or burning nettle </td>
-          <td>লাল-বিছুটি(Bengali) ;|; बिछाता [bichata], बिछुआ [bichua], बिछुटी [bichuti] (Bengali) ;|; </td>
+          <td>লাল-বিছুটি(Bengali) ;|; बिछाता [bichata], बिछुआ [bichua], बिछुटी [bichuti] (Hindi) ;|; </td>
      </tr>
       <tr>
           <td>51</td>
