--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -401,7 +401,7 @@ table {
           <td>Bhangra [ভাঙড়া] (Bengali) ;|; Bhangra [भंगरा] (Hindi)  </td>
      </tr>
 </table>
-	<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.docx" style="color:green;text-decoration: none;font-size: 1.2em;">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (Word File)</a></p>
-<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.pdf" style="color:green;text-decoration: none;font-size: 1.2em;">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (PDF File)</a></p>
+	<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.docx" style="color:green;text-decoration: none;font-size: 1.2em;" target="_blank">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (Word File)</a></p>
+<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.pdf" style="color:green;text-decoration: none;font-size: 1.2em; target="_blank"">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (PDF File)</a></p>
 </body>
 </html>
