--- a/indian_homoeopathy_drugs.html
+++ b/indian_homoeopathy_drugs.html
@@ -403,5 +403,7 @@ table {
 </table>
 	<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.docx" style="color:green;text-decoration: none;font-size: 1.2em;" target="_blank">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (Word File)</a></p>
 <p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA.pdf" style="color:green;text-decoration: none;font-size: 1.2em; target="_blank"">HOMEOPATHY MEDICINES COMMONLY KNOWN IN INDIA (PDF File)</a></p>
+	<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMOEOPATHY (In Hindi).xlsx" style="color:green;text-decoration: none;font-size: 1.2em; target="_blank"">HOMOEOPATHY INDIAN SOURCE (In Hindi) [EXCEL FILE]</a></p>
+	<p style="background-color: white;width: 50%;padding-left: 20px;"><a href="HOMOEOPATHY (In Hindi).pdf" style="color:green;text-decoration: none;font-size: 1.2em; target="_blank"">HOMOEOPATHY INDIAN SOURCE (In Hindi) [PDF FILE]</a></p>
 </body>
 </html>
